--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,6 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - .pgdata:/var/lib/postgresql/data/
+      - ./data/db:/var/lib/postgresql/data
     ports:
       - 54322:5432
